k8s/base/core/api/telemetry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-service
  labels:
    app: telemetry-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemetry-service
  template:
    metadata:
      labels:
        app: telemetry-service
    spec:
      containers:
        - name: telemetry-service
          image: telemetry-api-image
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
