k8s/base/core/api/telemetry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telemetry-service
spec:
  selector:
    app: telemetry-service
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
